--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -1,9 +1,5 @@
 streamlit==1.21.0
-tensorflow>=2.17.1
-numpy==1.24.3
-pandas==1.5.3
-matplotlib
-seaborn
-opencv-python
-scikit-learn
+tensorflow==2.11.0
+pillow
+numpy
 plotly
